--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,11 +29,15 @@ dist.jar=${dist.dir}/JavaApplication5.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.commons-math3-3.6.1.jar=C:\\Users\\Sotiris\\Desktop\\ptixiaki\\commons-math3-3.6.1.jar
 file.reference.json-simple-1.1.1.jar=C:\\Users\\Sotiris\\Desktop\\json-simple-1.1.1.jar
+file.reference.json-simple-1.1.1.jar-1=C:\\Users\\Sotiris\\Desktop\\ptixiaki\\json-simple-1.1.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.json-simple-1.1.1.jar}
+    ${file.reference.json-simple-1.1.1.jar}:\
+    ${file.reference.json-simple-1.1.1.jar-1}:\
+    ${file.reference.commons-math3-3.6.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
